--- a/print.html
+++ b/print.html
@@ -2,24 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>PDF + Image Merge Tool</title>
+<title>PDF Voter Extract Tool</title>
 
-<!-- PDF.js CDN -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.12.313/pdf.min.js"></script>
 
 <style>
     body {
-        font-family: Arial, sans-serif;
-        background: #e8e8e8;
-        text-align: center;
+        font-family: Arial;
+        background: #f1f1f1;
         padding: 20px;
+        text-align: center;
     }
-
-    h2 {
-        margin-bottom: 20px;
-    }
-
-    .upload-box {
+    .box {
         background: white;
         padding: 20px;
         border-radius: 15px;
@@ -28,168 +22,119 @@
         margin: auto;
         box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
-
-    input {
-        margin: 10px;
-    }
-
     .btn {
         padding: 14px 30px;
-        font-size: 18px;
-        border: none;
-        color: white;
-        background: #007bff;
-        border-radius: 10px;
-        cursor: pointer;
         margin: 10px;
-    }
-
-    .btn:hover {
-        background: #0056b3;
-    }
-
-    .output-box {
-        margin-top: 25px;
-    }
-
-    img.merged {
-        max-width: 95%;
-        border: 2px solid #000;
+        background: #007bff;
+        color: white;
+        font-size: 18px;
         border-radius: 10px;
-        margin-top: 20px;
+        border: none;
+    }
+    .card {
+        width: 100%;
+        background: white;
+        padding: 15px;
+        border-radius: 10px;
+        margin-top: 15px;
+        text-align: left;
+        font-size: 17px;
+        line-height: 1.6;
+        border: 1px solid #ccc;
     }
 
-    /* PRINT CLEAN MODE — no header/footer */
     @media print {
-        @page { margin: 0; }
-        body {
+        body * { visibility: hidden; }
+        #printArea, #printArea * { visibility: visible; }
+        #printArea {
             margin: 0;
             padding: 0;
-            background: white;
-        }
-        .upload-box, h2, .btn {
-            display: none;
-        }
-        #finalImg {
+            position: absolute;
+            top: 0;
             width: 100%;
-            border: none;
         }
+        @page { margin: 5mm; }
     }
 </style>
-</head>
 
+</head>
 <body>
 
-<h2>PDF + Image Mixer (Merge Tool)</h2>
+<h2>Extract Voter Details from PDF</h2>
 
-<div class="upload-box">
-
-    <label><b>Select PDF File:</b></label><br>
-    <input type="file" id="pdfFile" accept="application/pdf"><br>
-
-    <label><b>Select Image File:</b></label><br>
-    <input type="file" id="imgFile" accept="image/*"><br>
-
-    <button class="btn" onclick="mergeFiles()">Merge PDF + Image</button>
-
+<div class="box">
+    <input type="file" id="pdfFile" accept="application/pdf"><br><br>
+    <button class="btn" onclick="extractText()">Extract Info</button>
 </div>
 
-<div class="output-box">
-    <h3>Merged Output:</h3>
-    <img id="finalImg" class="merged" src="">
+<div id="printArea"></div>
 
-    <br>
-
-    <button class="btn" onclick="downloadMerged()">Download</button>
-
-    <button class="btn" onclick="window.print()">Print</button>
-
-    <button class="btn" onclick="sendWhatsapp()">WhatsApp Send</button>
-</div>
-
+<button id="printBtn" class="btn" style="display:none;" onclick="window.print()">Print</button>
+<button id="waBtn" class="btn" style="display:none;" onclick="sendWA()">WhatsApp Send</button>
 
 <script>
-let mergedDataUrl = "";
+async function extractText() {
+    const file = document.getElementById("pdfFile").files[0];
+    if (!file) return alert("Upload PDF!");
 
-/* Convert PDF → Canvas Image */
-function pdfToImage(pdfFile) {
-    return new Promise((resolve) => {
-        const fileReader = new FileReader();
+    const reader = new FileReader();
 
-        fileReader.onload = function () {
-            const typedarray = new Uint8Array(this.result);
+    reader.onload = async function () {
+        const typedarray = new Uint8Array(this.result);
 
-            pdfjsLib.getDocument(typedarray).promise.then(pdf => {
-                pdf.getPage(1).then(page => {
-                    const viewport = page.getViewport({ scale: 3 });
+        const pdf = await pdfjsLib.getDocument(typedarray).promise;
+        const page = await pdf.getPage(1);
 
-                    let canvas = document.createElement("canvas");
-                    let ctx = canvas.getContext("2d");
+        const textContent = await page.getTextContent();
+        let text = textContent.items.map(item => item.str).join(" ");
 
-                    canvas.height = viewport.height;
-                    canvas.width = viewport.width;
+        // CLEAN TEXT
+        text = text.replace(/\s+/g, " ");
 
-                    page.render({ canvasContext: ctx, viewport: viewport }).promise.then(() => {
-                        resolve(canvas);
-                    });
-                });
-            });
+        // AUTO EXTRACT FIELDS
+        const data = {
+            name: find(text, /(Name|नाम)[^:]*:\s*([A-Za-z\u0900-\u097F ]+)/),
+            epic: find(text, /(EPIC|EPIC No|ईपीआईसी)[^:]*:\s*([A-Z0-9]+)/),
+            age: find(text, /(Age|आयु)[^:]*:\s*([0-9]+)/),
+            gender: find(text, /(Gender|लिंग)[^:]*:\s*([A-Za-z\u0900-\u097F]+)/),
+            father: find(text, /(Father|Husband|पति|पिता)[^:]*:\s*([A-Za-z\u0900-\u097F ]+)/),
+            house: find(text, /(House|घर)[^:]*:\s*([A-Za-z0-9-]+)/),
+            serial: find(text, /(Serial|क्रमांक)[^:]*:\s*([0-9]+)/),
+            polling: find(text, /(Polling|Booth|मतदान केंद्र)[^:]*:\s*([A-Za-z\u0900-\u097F 0-9,.-]+)/)
         };
 
-        fileReader.readAsArrayBuffer(pdfFile);
-    });
-}
+        // MAKE CARD
+        let card = `
+        <div class="card">
+            <b>Name:</b> ${data.name}<br>
+            <b>EPIC:</b> ${data.epic}<br>
+            <b>Father/Husband:</b> ${data.father}<br>
+            <b>Age:</b> ${data.age}<br>
+            <b>Gender:</b> ${data.gender}<br>
+            <b>House No:</b> ${data.house}<br>
+            <b>Serial No:</b> ${data.serial}<br><br>
+            <b>Polling Address:</b><br> ${data.polling}
+        </div>
+        `;
 
-/* Merge PDF image + Uploaded image */
-async function mergeFiles() {
-    const pdfInput = document.getElementById("pdfFile").files[0];
-    const imgInput = document.getElementById("imgFile").files[0];
-
-    if (!pdfInput || !imgInput) {
-        alert("Please upload both PDF and Image!");
-        return;
-    }
-
-    const pdfCanvas = await pdfToImage(pdfInput);
-
-    const img = new Image();
-    img.src = URL.createObjectURL(imgInput);
-
-    img.onload = () => {
-        const finalCanvas = document.createElement("canvas");
-        const ctx = finalCanvas.getContext("2d");
-
-        const width = pdfCanvas.width;
-        const height = pdfCanvas.height + img.height + 20;
-
-        finalCanvas.width = width;
-        finalCanvas.height = height;
-
-        ctx.drawImage(pdfCanvas, 0, 0);
-        ctx.drawImage(img, 0, pdfCanvas.height + 10);
-
-        mergedDataUrl = finalCanvas.toDataURL("image/png");
-
-        document.getElementById("finalImg").src = mergedDataUrl;
+        document.getElementById("printArea").innerHTML = card;
+        document.getElementById("printBtn").style.display = "inline-block";
+        document.getElementById("waBtn").style.display = "inline-block";
     };
+
+    reader.readAsArrayBuffer(file);
 }
 
-/* Download merged output */
-function downloadMerged() {
-    if (!mergedDataUrl) return alert("Merge first!");
-
-    const a = document.createElement("a");
-    a.href = mergedDataUrl;
-    a.download = "merged_output.png";
-    a.click();
+// REGEX Extract Helper
+function find(text, regex) {
+    const match = text.match(regex);
+    return match ? match[2] : "Not Found";
 }
 
-/* WhatsApp send */
-function sendWhatsapp() {
-    if (!mergedDataUrl) return alert("Merge first!");
-
-    const encoded = encodeURIComponent(mergedDataUrl);
-    window.open("https://wa.me/?text=" + encoded, "_blank");
+// WhatsApp Send
+function sendWA() {
+    const card = document.getElementById("printArea").innerText;
+    window.open("https://wa.me/?text=" + encodeURIComponent(card), "_blank");
 }
 </script>
 
