--- a/print.html
+++ b/print.html
@@ -3,198 +3,155 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF + Image Merge & Mini Print</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.9.179/pdf.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<title>PDF + Image Merge & Print</title>
 <style>
-body { font-family: Arial; background:#f0f0f0; padding:20px; }
-h2 { text-align:center; }
-input { margin:10px 0; }
-#preview { width:220px; border:1px solid #ccc; padding:5px; background:#fff; }
-#preview img { width:100%; margin-top:5px; }
-.btn { padding:10px 15px; margin:5px; cursor:pointer; border:none; background:#3498db; color:#fff; border-radius:5px; }
-.btn:hover { background:#2980b9; }
-.print-area { width:200px; font-size:12px; line-height:1.2; }
-.print-area img { width:100%; margin-top:5px; }
-#image-controls { margin-top:10px; }
+body { font-family: Arial; background: #f1f1f1; padding: 20px; }
+h2 { text-align: center; margin-bottom: 20px; }
+input { margin: 10px 0; display:block; }
+#preview { margin-top: 20px; border:1px solid #ccc; padding:10px; background:#fff; }
+img.preview-img { width:150px; height:150px; object-fit:cover; display:block; margin:10px auto; }
+button { margin: 10px; padding:10px 20px; font-size:16px; cursor:pointer; }
+#pdfData { margin-top:10px; font-size:14px; line-height:1.4; white-space:pre-wrap; }
 </style>
 </head>
 <body>
 
-<h2>PDF + Image Merge & Mini Print</h2>
+<h2>PDF + Image Merge Tool</h2>
 
-<label>Upload PDF:</label><br>
-<input type="file" id="pdfFile" accept=".pdf"><br>
+<label>Select PDF File:</label>
+<input type="file" id="pdfFile" accept=".pdf">
 
-<label>Upload Image (once):</label><br>
-<input type="file" id="imgFile" accept="image/*"><br>
-<div id="image-controls"></div>
+<label>Select Image File:</label>
+<input type="file" id="imageFile" accept="image/*">
 
-<button class="btn" onclick="generatePreview()">Merge & Preview</button>
-<button class="btn" onclick="printContent()">Print</button>
-<button class="btn" id="downloadBtn">Download PDF</button>
-<button class="btn" id="whatsappBtn">WhatsApp Send</button>
+<button id="mergeBtn">Merge PDF + Image</button>
 
-<div id="preview"></div>
+<div id="preview">
+    <canvas id="pdfCanvas" style="display:none;"></canvas>
+    <img id="imgPreview" class="preview-img">
+    <div id="pdfData"></div>
+    <button id="printBtn">Print</button>
+    <button id="downloadBtn">Download</button>
+    <button id="whatsappBtn">WhatsApp Send</button>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.10.111/pdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
-let extractedData = {};
-let uploadedImage = null;
+let pdfFile, imageFile, extractedData;
 
-// PDF upload
-document.getElementById('pdfFile').addEventListener('change', async function(e){
-  const file = e.target.files[0];
-  if(!file) return;
-
-  const arrayBuffer = await file.arrayBuffer();
-  const pdf = await pdfjsLib.getDocument({data:arrayBuffer}).promise;
-  let textContent = '';
-  for(let i=1;i<=pdf.numPages;i++){
-    const page = await pdf.getPage(i);
-    const txt = await page.getTextContent();
-    txt.items.forEach(item => textContent += item.str + '\n');
-  }
-
-  // Label-based extraction
-  extractedData = {
-    firstName: getField(textContent, 'पहिले नाव / First Name'),
-    lastName: getField(textContent, 'आडनाव / Last Name'),
-    relativeFirst: getField(textContent, "नातेवाईकाचे पहिले नाव / Relative's First Name"),
-    relativeLast: getField(textContent, "नातेवाईकाचे आडनाव / Relative's Last Name"),
-    age: getField(textContent, 'वय / Age'),
-    gender: getField(textContent, 'लिंग / Gender'),
-    epic: getField(textContent, 'EPIC क्रमांक / EPIC No'),
-    pollingStation: getField(textContent, 'मतदान केंद्र / Polling Station'),
-    partNumber: getField(textContent, 'भाग क्रमांक-भागाचे नाव / Part Number- Part Name'),
-    partSerial: getField(textContent, 'भाग अनुक्रम क्रमांक/ Part Serial Number')
-  };
+// Load PDF
+document.getElementById('pdfFile').addEventListener('change', e => {
+    pdfFile = e.target.files[0];
 });
 
-function getField(text,label){
-  const regex = new RegExp(label+'\\s*\\n?\\s*(.*)');
-  const match = text.match(regex);
-  return match ? match[1].trim() : '';
-}
-
-// Image upload once + delete
-document.getElementById('imgFile').addEventListener('change', function(e){
-  const file = e.target.files[0];
-  if(!file) return;
-  const reader = new FileReader();
-  reader.onload = function(){
-    uploadedImage = reader.result;
-    renderImageControls();
-  };
-  reader.readAsDataURL(file);
+// Load Image
+document.getElementById('imageFile').addEventListener('change', e => {
+    imageFile = e.target.files[0];
+    const imgPreview = document.getElementById('imgPreview');
+    imgPreview.src = URL.createObjectURL(imageFile);
 });
 
-function renderImageControls(){
-  const controls = document.getElementById('image-controls');
-  controls.innerHTML = '';
-  if(uploadedImage){
-    const img = document.createElement('img');
-    img.src = uploadedImage;
-    img.style.width = '100px';
-    img.style.border = '1px solid #ccc';
-    img.style.marginTop = '5px';
-    controls.appendChild(img);
+// Merge PDF + Image
+document.getElementById('mergeBtn').addEventListener('click', async () => {
+    if(!pdfFile){ alert("Please select a PDF"); return; }
 
-    const delBtn = document.createElement('button');
-    delBtn.innerText = 'Delete Image';
-    delBtn.className = 'btn';
-    delBtn.onclick = function(){
-      uploadedImage = null;
-      document.getElementById('imgFile').value = '';
-      controls.innerHTML = '';
-      document.getElementById('preview').innerHTML = '';
-    };
-    controls.appendChild(delBtn);
-  }
-}
-
-// Merge & Preview
-function generatePreview(){
-  if(!uploadedImage){
-    alert("Please upload image first!");
-    return;
-  }
-  const previewDiv = document.getElementById('preview');
-  previewDiv.innerHTML = '';
-  const div = document.createElement('div');
-  div.className = 'print-area';
-  div.innerHTML = `
-    <strong>Voter Information</strong><br>
-    First Name: ${extractedData.firstName}<br>
-    Last Name: ${extractedData.lastName}<br>
-    Relative First: ${extractedData.relativeFirst}<br>
-    Relative Last: ${extractedData.relativeLast}<br>
-    Age: ${extractedData.age}<br>
-    Gender: ${extractedData.gender}<br>
-    EPIC No: ${extractedData.epic}<br>
-    Polling Station: ${extractedData.pollingStation}<br>
-    Part Number: ${extractedData.partNumber}<br>
-    Part Serial: ${extractedData.partSerial}<br>
-  `;
-  if(uploadedImage){
-    const img = document.createElement('img');
-    img.src = uploadedImage;
-    div.appendChild(img);
-  }
-  previewDiv.appendChild(div);
-
-  // Download merged PDF
-  document.getElementById('downloadBtn').onclick = async function(){
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF({ unit:'mm', format:[50,200] }); // 2-inch width approx
-    let y = 5;
-    for(const key in extractedData){
-      doc.text(`${key}: ${extractedData[key]}`,5,y);
-      y += 5;
-    }
-    if(uploadedImage){
-      const imgProps = await new Promise(resolve=>{
-        const img = new Image();
-        img.onload = ()=>resolve({ img, width: img.width, height: img.height });
-        img.src = uploadedImage;
-      });
-      const ratio = imgProps.width / imgProps.height;
-      const imgWidth = 45; // mm for 2 inch
-      const imgHeight = imgWidth / ratio;
-      doc.addImage(uploadedImage,'JPEG',5,y,imgWidth,imgHeight);
-    }
-    doc.save('voter_merged.pdf');
-  };
-
-  // WhatsApp
-  document.getElementById('whatsappBtn').onclick = function(){
-    const text = encodeURIComponent(
-`Voter Info:
-First Name: ${extractedData.firstName}
-Last Name: ${extractedData.lastName}
-Relative First: ${extractedData.relativeFirst}
-Relative Last: ${extractedData.relativeLast}
-Age: ${extractedData.age}
-Gender: ${extractedData.gender}
-EPIC No: ${extractedData.epic}
-Polling Station: ${extractedData.pollingStation}`
-    );
-    window.open(`https://wa.me/?text=${text}`);
-  };
-}
+    // Extract PDF text
+    const pdfData = await extractPDFText(pdfFile);
+    extractedData = extractFields(pdfData);
+    document.getElementById('pdfData').textContent = formatData(extractedData);
+});
 
 // Print
-function printContent(){
-  if(!uploadedImage){
-    alert("Please upload image first!");
-    return;
-  }
-  const printWindow = window.open('', '', 'width=220,height=600');
-  printWindow.document.write('<html><head><title>Print</title></head><body>');
-  printWindow.document.write(document.querySelector('.print-area').outerHTML);
-  printWindow.document.write('</body></html>');
-  printWindow.document.close();
-  printWindow.focus();
-  printWindow.print();
+document.getElementById('printBtn').addEventListener('click', () => {
+    if(!extractedData) return alert("Merge PDF + Image first");
+    const doc = new jspdf.jsPDF({
+        unit:'mm',
+        format:[50,200] // 2 inch width, height flexible
+    });
+
+    let y = 5;
+    for(const key in extractedData){
+        if(extractedData[key]) {
+            doc.text(`${key}: ${extractedData[key]}`,5,y);
+            y += 5;
+        }
+    }
+
+    if(imageFile){
+        const img = document.getElementById('imgPreview');
+        doc.addImage(img, 'JPEG',5,y,40,40); // width 40mm height 40mm
+    }
+
+    doc.autoPrint();
+    window.open(doc.output('bloburl'), '_blank');
+});
+
+// Download
+document.getElementById('downloadBtn').addEventListener('click', () => {
+    if(!extractedData) return alert("Merge PDF + Image first");
+    const doc = new jspdf.jsPDF({unit:'mm', format:[50,200]});
+    let y = 5;
+    for(const key in extractedData){
+        if(extractedData[key]) {
+            doc.text(`${key}: ${extractedData[key]}`,5,y);
+            y += 5;
+        }
+    }
+    if(imageFile){
+        const img = document.getElementById('imgPreview');
+        doc.addImage(img, 'JPEG',5,y,40,40);
+    }
+    doc.save('voter_merge.pdf');
+});
+
+// WhatsApp send
+document.getElementById('whatsappBtn').addEventListener('click', () => {
+    if(!extractedData) return alert("Merge PDF + Image first");
+    alert("For WhatsApp send, please download PDF first and send manually (WhatsApp Web or App).");
+});
+
+// ---------------- Helper Functions ----------------
+async function extractPDFText(file){
+    const arrayBuffer = await file.arrayBuffer();
+    const pdf = await pdfjsLib.getDocument({data:arrayBuffer}).promise;
+    let textContent = '';
+    for(let i=0;i<pdf.numPages;i++){
+        const page = await pdf.getPage(i+1);
+        const txt = await page.getTextContent();
+        textContent += txt.items.map(t=>t.str).join(' ') + '\n';
+    }
+    return textContent;
+}
+
+function extractFields(text){
+    function getField(text,label){
+        const regex = new RegExp(label + '\\s*:?\\s*(.*?)\\s*(?=\\n|$)','i');
+        const match = text.match(regex);
+        return match? match[1].trim() : '';
+    }
+
+    return {
+        'First Name': getField(text,'पहिले नाव / First Name'),
+        'Last Name': getField(text,'आडनाव / Last Name'),
+        "Relative First": getField(text,"नातेवाईकाचे पहिले नाव / Relative's First Name"),
+        "Relative Last": getField(text,"नातेवाईकाचे आडनाव / Relative's Last Name"),
+        'Age': getField(text,'वय / Age'),
+        'Gender': getField(text,'लिंग / Gender'),
+        'EPIC No': getField(text,'EPIC क्रमांक / EPIC No'),
+        'State': getField(text,'राज्य / State'),
+        'Parliamentary Constituency': getField(text,'संसदीय मतदारसंघ क्रमांक- संसदीय मतदारसंघाचे नाव / Parliamentary Constituency Number - Parliamentary Constituency Name'),
+        'Assembly Constituency': getField(text,'विधानसभा मतदारसंघ क्रमांक- विधानसभा मतदारसंघाचे Name / Assembly Constituency Number-Assembly Constituency Name'),
+        'Polling Station': getField(text,'मतदान केंद्र / Polling Station'),
+        'Part Number': getField(text,'भाग क्रमांक-भागाचे नाव / Part Number- Part Name'),
+        'Part Serial': getField(text,'भाग अनुक्रम क्रमांक/ Part Serial Number'),
+        'Polling Date': getField(text,'मतदानाची तारीख / Polling Date')
+    };
+}
+
+function formatData(data){
+    return Object.entries(data).map(([k,v])=>`${k}: ${v}`).join('\n');
 }
 </script>
 </body>
