--- a/print.html
+++ b/print.html
@@ -8,7 +8,7 @@
 <style>
 body {font-family:Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
 input, button {margin:10px; padding:10px;}
-#preview img {max-width:150px; max-height:150px; border-radius:10px; margin-top:10px;}
+#imagesList img {max-width:150px; max-height:150px; border-radius:10px; margin-top:10px;}
 .btn3d {padding:15px 50px; font-size:18px; border-radius:12px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);}
 .btn3d:active {transform:translateY(5px); box-shadow:0 2px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
 #imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
@@ -22,7 +22,7 @@ input, button {margin:10px; padding:10px;}
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
-<label>Select Image File:</label>
+<label>Select Image File (Save Once):</label>
 <input type="file" id="imgFile" accept="image/*">
 <div id="imagesList"></div>
 
@@ -38,13 +38,14 @@ const { jsPDF } = window.jspdf;
 let pdfData = null;
 let imgData = null;
 
-// Load saved image from localStorage if exists
-let savedImage = localStorage.getItem('mergedImage');
+// Load saved image from localStorage
+const savedImage = localStorage.getItem('voterImage');
 if(savedImage){
-    displayImage(savedImage);
+    imgData = savedImage;
+    displayImage(imgData);
 }
 
-// PDF extract
+// PDF Upload and extract required fields
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
@@ -61,14 +62,14 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
     alert("PDF processed successfully!");
 });
 
-// Image upload and save
+// Image upload (save to localStorage)
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
     const reader = new FileReader();
     reader.onload = function(e){
         imgData = e.target.result;
-        localStorage.setItem('mergedImage', imgData); // save
+        localStorage.setItem('voterImage', imgData);
         displayImage(imgData);
     };
     reader.readAsDataURL(file);
@@ -81,76 +82,73 @@ function displayImage(src){
     box.className = 'img-box';
     const img = document.createElement('img');
     img.src = src;
-    img.style.width = '150px';
-    img.style.height = '150px';
-    img.style.objectFit = 'cover';
+    img.style.width='150px';
+    img.style.height='150px';
+    img.style.objectFit='cover';
     const del = document.createElement('button');
-    del.innerText = 'X';
-    del.className = 'delete-btn';
-    del.onclick = () => { localStorage.removeItem('mergedImage'); imgData=null; div.innerHTML=''; };
+    del.innerText='X';
+    del.className='delete-btn';
+    del.onclick = () => { localStorage.removeItem('voterImage'); imgData=null; div.innerHTML=''; };
     box.appendChild(img);
     box.appendChild(del);
     div.appendChild(box);
 }
 
-// Extract required fields
+// Extract only required fields
 function extractFields(text){
     const fields = {};
-    fields.firstName = matchField(text, /First Name:\s*(.*)/i);
-    fields.lastName = matchField(text, /Last Name:\s*(.*)/i);
-    fields.relativeFirst = matchField(text, /Relative First:\s*(.*)/i);
-    fields.relativeLast = matchField(text, /Relative Last:\s*(.*)/i);
-    fields.age = matchField(text, /Age:\s*(.*)/i);
-    fields.gender = matchField(text, /Gender:\s*(.*)/i);
-    fields.epic = matchField(text, /EPIC No:\s*(.*)/i);
-    fields.state = matchField(text, /State:\s*(.*)/i);
-    fields.parliamentary = matchField(text, /Parliamentary Constituency:\s*(.*)/i);
-    fields.assembly = matchField(text, /Assembly Constituency:\s*(.*)/i);
-    fields.polling = matchField(text, /Polling Station:\s*(.*)/i);
-    fields.partNumber = matchField(text, /Part Number:\s*(.*)/i);
-    fields.partSerial = matchField(text, /Part Serial:\s*(.*)/i);
-    fields.pollingDate = matchField(text, /Polling Date:\s*(.*)/i);
+    fields['First Name'] = matchField(text,/First Name:\s*(.*)/i);
+    fields['Last Name'] = matchField(text,/Last Name:\s*(.*)/i);
+    fields['Relative First'] = matchField(text,/Relative First:\s*(.*)/i);
+    fields['Relative Last'] = matchField(text,/Relative Last:\s*(.*)/i);
+    fields['Age'] = matchField(text,/Age:\s*(.*)/i);
+    fields['Gender'] = matchField(text,/Gender:\s*(.*)/i);
+    fields['EPIC No'] = matchField(text,/EPIC No:\s*(.*)/i);
+    fields['State'] = matchField(text,/State:\s*(.*)/i);
+    fields['Parliamentary'] = matchField(text,/Parliamentary Constituency:\s*(.*)/i);
+    fields['Assembly'] = matchField(text,/Assembly Constituency:\s*(.*)/i);
+    fields['Polling'] = matchField(text,/Polling Station:\s*(.*)/i);
+    fields['Part Number'] = matchField(text,/Part Number:\s*(.*)/i);
+    fields['Part Serial'] = matchField(text,/Part Serial:\s*(.*)/i);
+    fields['Polling Date'] = matchField(text,/Polling Date:\s*(.*)/i);
     return fields;
 }
 
-function matchField(text, regex){
-    const m = text.match(regex);
-    return m ? m[1].trim() : '';
-}
+function matchField(text,regex){ const m=text.match(regex); return m ? m[1].trim() : ''; }
 
-// Merge and print
+// Merge + Print
 async function mergeAndPrint(){
     if(!pdfData){ alert("Upload PDF first"); return;}
-    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width approx
-    let y = 5;
+    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
+    let y=5;
     for(const [key,val] of Object.entries(pdfData)){
-        doc.text(`${key.replace(/([A-Z])/g, ' $1')}: ${val}`, 5, y);
-        y += 5;
+        doc.text(`${key}: ${val}`,5,y);
+        y+=5;
     }
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData, 'JPEG', 5, y, 40, 40); // image below voter info
+        doc.addImage(imgData,'JPEG',5,y,40,40);
     }
     doc.autoPrint();
     window.open(doc.output('bloburl'),'_blank');
 }
 
-// Download merged PDF
+// Download
 async function downloadMerged(){
     if(!pdfData){ alert("Upload PDF first"); return;}
     const doc = new jsPDF({unit:'mm', format:[50,200]});
-    let y = 5;
+    let y=5;
     for(const [key,val] of Object.entries(pdfData)){
-        doc.text(`${key.replace(/([A-Z])/g, ' $1')}: ${val}`, 5, y);
-        y += 5;
+        doc.text(`${key}: ${val}`,5,y);
+        y+=5;
     }
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData, 'JPEG', 5, y, 40, 40);
+        doc.addImage(imgData,'JPEG',5,y,40,40);
     }
     doc.save('Voter-Info.pdf');
 }
@@ -159,21 +157,21 @@ async function downloadMerged(){
 async function sendWhatsApp(){
     if(!pdfData){ alert("Upload PDF first"); return;}
     const doc = new jsPDF({unit:'mm', format:[50,200]});
-    let y = 5;
+    let y=5;
     for(const [key,val] of Object.entries(pdfData)){
-        doc.text(`${key.replace(/([A-Z])/g, ' $1')}: ${val}`, 5, y);
-        y += 5;
+        doc.text(`${key}: ${val}`,5,y);
+        y+=5;
     }
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData, 'JPEG', 5, y, 40, 40);
+        doc.addImage(imgData,'JPEG',5,y,40,40);
     }
     const blob = doc.output('blob');
-    const file = new File([blob], 'VoterInfo.pdf', {type:'application/pdf'});
+    const file = new File([blob],'VoterInfo.pdf',{type:'application/pdf'});
     const url = URL.createObjectURL(file);
-    window.open(`https://wa.me/?text=Voter Info PDF: ${url}`, '_blank');
+    window.open(`https://wa.me/?text=Voter Info PDF: ${url}`,'_blank');
 }
 </script>
 </body>
