--- a/print.html
+++ b/print.html
@@ -3,27 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Voter PDF + Image Merge Tool</title>
+<title>PDF + Image Mini Printer</title>
 <link rel="stylesheet" href="style.css">
 <style>
-body { font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px; }
-input, button { margin:10px; padding:10px; font-size:16px; }
+body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 10px; }
+input, button { margin: 10px; padding: 10px; }
 #imagesList img { max-width:150px; max-height:150px; border-radius:10px; margin-top:10px; }
-.btn3d { padding:15px 50px; font-size:18px; border-radius:12px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4); }
-.btn3d:active { transform:translateY(5px); box-shadow:0 2px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4); }
-#imagesList { display:flex; flex-wrap:wrap; gap:10px; margin-top:10px; }
-.img-box { position:relative; }
-.delete-btn { position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:20px; height:20px; cursor:pointer; }
+.btn3d { padding: 15px 50px; font-size: 16px; border-radius: 12px; color: #fff; cursor: pointer; border: none; background: linear-gradient(145deg,#3498db,#2980b9); box-shadow: 0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);}
+.btn3d:active { transform: translateY(5px); box-shadow: 0 2px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
+#imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
+.img-box {position:relative;}
+.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:20px; height:20px; cursor:pointer;}
 </style>
 </head>
 <body>
 
-<h2>Voter PDF + Image Merge Tool</h2>
+<h2>PDF + Image Mini Printer Tool</h2>
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
+
 <label>Select Image File (Save Once):</label>
 <input type="file" id="imgFile" accept="image/*">
+
 <div id="imagesList"></div>
 
 <button class="btn3d" onclick="mergeAndPrint()">Print</button>
@@ -35,7 +37,7 @@ input, button { margin:10px; padding:10px; font-size:16px; }
 
 <script>
 const { jsPDF } = window.jspdf;
-let pdfData = null;
+let pdfCanvasImg = null;
 let imgData = null;
 
 // Load saved image from localStorage
@@ -45,36 +47,7 @@ if(savedImage){
     displayImage(imgData);
 }
 
-// PDF Upload and extract required fields
-document.getElementById('pdfFile').addEventListener('change', async function(){
-    const file = this.files[0];
-    if(!file) return;
-    const arrayBuffer = await file.arrayBuffer();
-    const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
-    let fullText = '';
-    for(let i=1;i<=pdf.numPages;i++){
-        const page = await pdf.getPage(i);
-        const content = await page.getTextContent();
-        const pageText = content.items.map(item=>item.str).join(' ');
-        fullText += pageText + '\n';
-    }
-    pdfData = extractFields(fullText);
-    alert("PDF processed successfully!");
-});
-
-// Image upload (save to localStorage)
-document.getElementById('imgFile').addEventListener('change', function(){
-    const file = this.files[0];
-    if(!file) return;
-    const reader = new FileReader();
-    reader.onload = function(e){
-        imgData = e.target.result;
-        localStorage.setItem('voterImage', imgData);
-        displayImage(imgData);
-    };
-    reader.readAsDataURL(file);
-});
-
+// Display uploaded image
 function displayImage(src){
     const div = document.getElementById('imagesList');
     div.innerHTML = '';
@@ -94,84 +67,89 @@ function displayImage(src){
     div.appendChild(box);
 }
 
-// Extract required fields in Marathi + English
-function extractFields(text){
-    const fields = {};
-    fields['First Name'] = matchField(text,/(?:पहिले नाव \/ First Name:?)\s*(.*)/i);
-    fields['Last Name'] = matchField(text,/(?:आडनाव \/ Last Name:?)\s*(.*)/i);
-    fields['Relative First'] = matchField(text,/(?:नातेवाईकाचे पहिले नाव \/ Relative's First Name:?)\s*(.*)/i);
-    fields['Relative Last'] = matchField(text,/(?:नातेवाईकाचे आडनाव \/ Relative's Last Name:?)\s*(.*)/i);
-    fields['Age'] = matchField(text,/(?:वय \/ Age:?)\s*(.*)/i);
-    fields['Gender'] = matchField(text,/(?:लिंग \/ Gender:?)\s*(.*)/i);
-    fields['EPIC No'] = matchField(text,/(?:EPIC क्रमांक \/ EPIC No:?)\s*(.*)/i);
-    fields['State'] = matchField(text,/(?:राज्य \/ State:?)\s*(.*)/i);
-    fields['Parliamentary'] = matchField(text,/(?:संसदीय मतदारसंघ क्रमांक- संसदीय मतदारसंघाचे नाव \/ Parliamentary Constituency:?)\s*(.*)/i);
-    fields['Assembly'] = matchField(text,/(?:विधानसभा मतदारसंघ क्रमांक- विधानसभा मतदारसंघाचे नाव \/ Assembly Constituency:?)\s*(.*)/i);
-    fields['Polling'] = matchField(text,/(?:मतदान केंद्र \/ Polling Station:?)\s*(.*)/i);
-    fields['Part Number'] = matchField(text,/(?:भाग क्रमांक-भागाचे नाव \/ Part Number:?)\s*(.*)/i);
-    fields['Part Serial'] = matchField(text,/(?:भाग अनुक्रम क्रमांक \/ Part Serial:?)\s*(.*)/i);
-    fields['Polling Date'] = matchField(text,/(?:मतदानाची तारीख \/ Polling Date:?)\s*(.*)/i);
-    return fields;
-}
+// PDF Upload and render to image
+document.getElementById('pdfFile').addEventListener('change', async function(){
+    const file = this.files[0];
+    if(!file) return;
+    const arrayBuffer = await file.arrayBuffer();
+    const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
 
-function matchField(text,regex){ const m=text.match(regex); return m ? m[1].trim() : ''; }
+    const page = await pdf.getPage(1); // first page only (for mini printer)
+    const viewport = page.getViewport({ scale: 2 }); 
+    const canvas = document.createElement('canvas');
+    canvas.width = viewport.width;
+    canvas.height = viewport.height;
+    const context = canvas.getContext('2d');
 
-// Merge + Print
+    await page.render({canvasContext: context, viewport: viewport}).promise;
+
+    pdfCanvasImg = canvas.toDataURL('image/jpeg');
+    alert("PDF processed successfully!");
+});
+
+// Image upload (save to localStorage)
+document.getElementById('imgFile').addEventListener('change', function(){
+    const file = this.files[0];
+    if(!file) return;
+    const reader = new FileReader();
+    reader.onload = function(e){
+        imgData = e.target.result;
+        localStorage.setItem('voterImage', imgData);
+        displayImage(imgData);
+    };
+    reader.readAsDataURL(file);
+});
+
+// Merge PDF + Image and Print
 async function mergeAndPrint(){
-    if(!pdfData){ alert("Upload PDF first"); return;}
+    if(!pdfCanvasImg){ alert("Upload PDF first"); return;}
     const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
-    let y=5;
-    for(const [key,val] of Object.entries(pdfData)){
-        doc.text(`${key}: ${val}`,5,y);
-        y+=5;
-    }
+    let y = 0;
+    doc.addImage(pdfCanvasImg,'JPEG',0,y,50,100); // adjust height if needed
+    y += 105;
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData,'JPEG',5,y,40,40);
+        doc.addImage(imgData,'JPEG',0,y,50,50);
     }
     doc.autoPrint();
     window.open(doc.output('bloburl'),'_blank');
 }
 
-// Download
+// Download merged PDF+Image
 async function downloadMerged(){
-    if(!pdfData){ alert("Upload PDF first"); return;}
+    if(!pdfCanvasImg){ alert("Upload PDF first"); return;}
     const doc = new jsPDF({unit:'mm', format:[50,200]});
-    let y=5;
-    for(const [key,val] of Object.entries(pdfData)){
-        doc.text(`${key}: ${val}`,5,y);
-        y+=5;
-    }
+    let y = 0;
+    doc.addImage(pdfCanvasImg,'JPEG',0,y,50,100);
+    y += 105;
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData,'JPEG',5,y,40,40);
+        doc.addImage(imgData,'JPEG',0,y,50,50);
     }
-    doc.save('Voter-Info.pdf');
+    doc.save('VoterMerged.pdf');
 }
 
 // WhatsApp send
 async function sendWhatsApp(){
-    if(!pdfData){ alert("Upload PDF first"); return;}
+    if(!pdfCanvasImg){ alert("Upload PDF first"); return;}
     const doc = new jsPDF({unit:'mm', format:[50,200]});
-    let y=5;
-    for(const [key,val] of Object.entries(pdfData)){
-        doc.text(`${key}: ${val}`,5,y);
-        y+=5;
-    }
+    let y = 0;
+    doc.addImage(pdfCanvasImg,'JPEG',0,y,50,100);
+    y += 105;
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData,'JPEG',5,y,40,40);
+        doc.addImage(imgData,'JPEG',0,y,50,50);
     }
     const blob = doc.output('blob');
-    const file = new File([blob],'VoterInfo.pdf',{type:'application/pdf'});
+    const file = new File([blob],'VoterMerged.pdf',{type:'application/pdf'});
     const url = URL.createObjectURL(file);
-    window.open(`https://wa.me/?text=Voter Info PDF: ${url}`,'_blank');
+    window.open(`https://wa.me/?text=Voter PDF & Image: ${url}`,'_blank');
 }
 </script>
 </body>
